metadata/force-app/main/default/objects/Campaign/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>BO-1150

Objective: define the activity being executed for the campaign, allowing for improved segmentation in performance reporting</description>
    <inlineHelpText>What activity is being executed for the campaign?</inlineHelpText>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BrightTalk Webinar</fullName>
            </value>
            <value>
                <fullName>Content Piece</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Events and Tradeshows</fullName>
            </value>
            <value>
                <fullName>External Webinar</fullName>
            </value>
            <value>
                <fullName>Internal Webinar</fullName>
            </value>
            <value>
                <fullName>Lead Purchase</fullName>
            </value>
            <value>
                <fullName>Paid Sponsorship</fullName>
            </value>
            <value>
                <fullName>Vendor Activity</fullName>
            </value>
            <value>
                <fullName>Webinar Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>