metadata/force-app/main/default/objects/Campaign/fields/bizible2__Bizible_Attribution_SyncType__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Bizible_Attribution_SyncType__c</fullName>
    <description>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</description>
    <inlineHelpText>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</inlineHelpText>
    <label>Enable Bizible Touchpoints</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include all Campaign Members</fullName>
            </value>
            <value>
                <fullName>Include only &quot;Responded&quot; Campaign Members</fullName>
            </value>
            <value>
                <fullName>Exclude all Campaign Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>