metadata/force-app/main/default/objects/Campaign/fields/bizible2__Touchpoint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Start_Date__c</fullName>
    <description>The start date when Bizible should begin to enable Campaign Members for touchpoints</description>
    <inlineHelpText>The start date when Bizible should begin to enable Campaign Members for touchpoints</inlineHelpText>
    <label>Touchpoint Start Date</label>
    <type>Date</type>
</CustomField>