metadata/force-app/main/default/objects/Campaign/fields/bizible2__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>bizible2__UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used internally by Bizible help track Campaigns</description>
    <externalId>true</externalId>
    <label>UniqueId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>