metadata/force-app/main/default/objects/Campaign/fields/Campaign_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_18_digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID (18 digits)</label>
    <type>Text</type>
</CustomField>