metadata/force-app/main/default/objects/Campaign/fields/FCR_CascadeParent__c.field-meta.xml
<CustomField>
    <fullName>FCR_CascadeParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field
Reference to cascaded parent campaign</description>
    <inlineHelpText>Indicates the parent campaign if this campaign was created as the result of a repeat response.</inlineHelpText>
    <label>Campaign Parent</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cascaded Campaigns</relationshipLabel>
    <relationshipName>CascadeParent</relationshipName>
    <type>Lookup</type>
</CustomField>