metadata/force-app/main/default/objects/Campaign/fields/LeanData__Rep_LT_Attribution__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Rep_LT_Attribution__c</fullName>
    <label>LD LT Attribution</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>