metadata/force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Campaign_Member_Totals__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
    <label>Reporting CM Totals (Deprecated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>