metadata/force-app/main/default/objects/Campaign/fields/LeanData__Reporting_On_Target__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_On_Target__c</fullName>
    <label>Reporting On-Target (Deprecated)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>