metadata/force-app/main/default/objects/Campaign/fields/On24_archiveend__c.field-meta.xml
<CustomField>
    <fullName>On24_archiveend__c</fullName>
    <label>On24 Archive End</label>
    <type>DateTime</type>
</CustomField>