metadata/force-app/main/default/objects/Campaign/fields/On24_archivestart__c.field-meta.xml
<CustomField>
    <fullName>On24_archivestart__c</fullName>
    <label>On24 Archive Start</label>
    <type>DateTime</type>
</CustomField>