metadata/force-app/main/default/objects/Campaign/fields/On24_audiencekey__c.field-meta.xml
<CustomField>
    <fullName>On24_audiencekey__c</fullName>
    <label>On24 Audience Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>