metadata/force-app/main/default/objects/Campaign/fields/On24_audienceurl__c.field-meta.xml
<CustomField>
    <fullName>On24_audienceurl__c</fullName>
    <label>On24 Audience URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>