metadata/force-app/main/default/objects/Campaign/fields/On24_campaigncode__c.field-meta.xml
<CustomField>
    <fullName>On24_campaigncode__c</fullName>
    <label>On24 Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>