metadata/force-app/main/default/objects/Campaign/fields/On24_category__c.field-meta.xml
<CustomField>
    <fullName>On24_category__c</fullName>
    <label>On24 Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>