metadata/force-app/main/default/objects/Campaign/fields/On24_displaytimezone__c.field-meta.xml
<CustomField>
    <fullName>On24_displaytimezone__c</fullName>
    <label>On24 Display Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>