metadata/force-app/main/default/objects/Campaign/fields/On24_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>On24_Event_ID__c</fullName>
    <label>On24 Event ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>