metadata/force-app/main/default/objects/Campaign/fields/On24_eventcreatetimestamp__c.field-meta.xml
<CustomField>
    <fullName>On24_eventcreatetimestamp__c</fullName>
    <label>On24 Event Create Timestamp</label>
    <type>DateTime</type>
</CustomField>