metadata/force-app/main/default/objects/Campaign/fields/On24_eventduration__c.field-meta.xml
<CustomField>
    <fullName>On24_eventduration__c</fullName>
    <label>On24 Event Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>