metadata/force-app/main/default/objects/Campaign/fields/On24_eventtag1__c.field-meta.xml
<CustomField>
    <fullName>On24_eventtag1__c</fullName>
    <label>On24 Event Tag 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>