metadata/force-app/main/default/objects/Campaign/fields/On24_eventtag3__c.field-meta.xml
<CustomField>
    <fullName>On24_eventtag3__c</fullName>
    <label>On24 Event Tag 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>