metadata/force-app/main/default/objects/Campaign/fields/On24_eventtime__c.field-meta.xml
<CustomField>
    <fullName>On24_eventtime__c</fullName>
    <label>On24 Event Time</label>
    <type>DateTime</type>
</CustomField>