metadata/force-app/main/default/objects/Campaign/fields/On24_lastmodified__c.field-meta.xml
<CustomField>
    <fullName>On24_lastmodified__c</fullName>
    <label>On24 Last Modified</label>
    <type>DateTime</type>
</CustomField>