metadata/force-app/main/default/objects/Campaign/fields/On24_lastupdated__c.field-meta.xml
<CustomField>
    <fullName>On24_lastupdated__c</fullName>
    <label>On24 Last Updated</label>
    <type>DateTime</type>
</CustomField>