metadata/force-app/main/default/objects/Campaign/fields/On24_liveend__c.field-meta.xml
<CustomField>
    <fullName>On24_liveend__c</fullName>
    <label>On24 Live End</label>
    <type>DateTime</type>
</CustomField>