metadata/force-app/main/default/objects/Campaign/fields/On24_livestart__c.field-meta.xml
<CustomField>
    <fullName>On24_livestart__c</fullName>
    <label>On24 Live Start</label>
    <type>DateTime</type>
</CustomField>