metadata/force-app/main/default/objects/Campaign/fields/On24_presenterurl__c.field-meta.xml
<CustomField>
    <fullName>On24_presenterurl__c</fullName>
    <label>On24 Presenter URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>