metadata/force-app/main/default/objects/Campaign/fields/On24_previewurl__c.field-meta.xml
<CustomField>
    <fullName>On24_previewurl__c</fullName>
    <label>On24 Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>