metadata/force-app/main/default/objects/Campaign/fields/On24_registrationpagehits__c.field-meta.xml
<CustomField>
    <fullName>On24_registrationpagehits__c</fullName>
    <label>On24 Number of Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>