metadata/force-app/main/default/objects/Campaign/fields/On24_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>On24_Report_URL__c</fullName>
    <label>On24 Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>