metadata/force-app/main/default/objects/Campaign/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>BO-1150

Objective: segment marketing campaigns based on target buyer stage to better track campaign outcomes as they relate to their specific objectives</description>
    <inlineHelpText>What buyer stage is being targeted by the campaign?</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>