metadata/force-app/main/default/objects/Campaign/fields/Target_Region__c.field-meta.xml
<CustomField>
    <fullName>Target_Region__c</fullName>
    <description>BO-1150

Objective: attribute campaigns based on the region they were executed, improving the ability to segment in performance reporting</description>
    <inlineHelpText>Which region is the campaign targeting?</inlineHelpText>
    <label>Target Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>Rest of Europe</fullName>
            </value>
            <value>
                <fullName>Southern Europe</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US/CA</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>