metadata/force-app/main/default/objects/Campaign/recordTypes/Pardot.recordType-meta.xml
<RecordType>
    <fullName>Pardot</fullName>
    <active>true</active>
    <label>Pardot</label>
</RecordType>