metadata/force-app/main/default/objects/Campaign/validationRules/bizible2__Update_Bizible_Attribution_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>bizible2__Update_Bizible_Attribution_Rule</fullName>
    <active>false</active>
    <description>As of version 6.0, this rule is deprecated.</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorMessage>Deprecated rule</errorMessage>
</ValidationRule>