metadata/force-app/main/default/objects/Campaign/listViews/Demandware_2016.listView-meta.xml
<ListView>
    <fullName>Demandware_2016</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Demandware 2016</label>
</ListView>