metadata/force-app/main/default/objects/Campaign/listViews/EMEA_South_Campaign_2022_2023.listView-meta.xml
<ListView>
    <fullName>EMEA_South_Campaign_2022_2023</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>EMEA South Campaign 2022/2023</label>
</ListView>