metadata/force-app/main/default/objects/Campaign/listViews/EN_Market_Campaigns.listView-meta.xml
<ListView>
    <fullName>EN_Market_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>EN_</value>
    </filters>
    <label>EN Market Campaigns</label>
</ListView>