metadata/force-app/main/default/objects/Campaign/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>Events</value>
    </filters>
    <label>Events</label>
</ListView>