metadata/force-app/main/default/objects/Campaign/listViews/Events_2015.listView-meta.xml
<ListView>
    <fullName>Events_2015</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Events 2015</value>
    </filters>
    <label>Events 2015</label>
</ListView>