metadata/force-app/main/default/objects/Campaign/listViews/Hylkes_Campaigns.listView-meta.xml
<ListView>
    <fullName>Hylkes_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>PARENT_NAME</columns>
    <columns>AMOUNT_WON</columns>
    <columns>AMOUNT_ALL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Hylke</value>
    </filters>
    <label>Hylkes Campaigns</label>
</ListView>