metadata/force-app/main/default/objects/Campaign/listViews/John_Campaign.listView-meta.xml
<ListView>
    <fullName>John_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notContain</operation>
        <value>2014,Panorama Berlin,AHIC,ONbrand</value>
    </filters>
    <label>John - Campaign</label>
</ListView>