metadata/force-app/main/default/objects/Campaign/listViews/Luke_s_Campaigns.listView-meta.xml
<ListView>
    <fullName>Luke_s_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Luke</value>
    </filters>
    <label>Luke&apos;s Campaigns</label>
</ListView>