metadata/force-app/main/default/objects/Campaign/listViews/Outbound_Campaigns_Overview.listView-meta.xml
<ListView>
    <fullName>Outbound_Campaigns_Overview</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound Campaigns Overview</label>
</ListView>