metadata/force-app/main/default/objects/Campaign/listViews/Top_bedrijven_Belgie.listView-meta.xml
<ListView>
    <fullName>Top_bedrijven_Belgie</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>Top bedrijven Belgie</value>
    </filters>
    <label>Top bedrijven Belgie</label>
</ListView>