metadata/force-app/main/default/objects/Campaign/listViews/UK_Campaigns_20181.listView-meta.xml
<ListView>
    <fullName>UK_Campaigns_20181</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>FS - UK</value>
    </filters>
    <label>UK Campaigns 2018</label>
</ListView>