metadata/force-app/main/default/objects/Campaign/listViews/Update_sourced_by_marketing.listView-meta.xml
<ListView>
    <fullName>Update_sourced_by_marketing</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Update sourced by marketing</label>
</ListView>